[tool.poetry]
name = "integrity"
version = "0.1.0"
description = ""
authors = ["TheWii <67249660+TheWii@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
beet = "^0.56.0"
mecha = "^0.43.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
