[tool.poetry]
name = "integrity"
version = "0.9.0"
description = "Development facilities for the bolt environment"
authors = ["TheWii"]
license = "MIT"

homepage = "https://github.com/thewii/integrity"
repository = "https://github.com/thewii/integrity"

readme = "README.md"

keywords = [
  "beet",
  "minecraft",
  "bolt",
  "mecha"
]

[tool.poetry.dependencies]
python = "^3.10"
beet = ">=0.63.1"
mecha = ">=0.48.1"
bolt = ">=0.16"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
python-semantic-release = "7.28.1"
mudkip = "^0.5.3"
pytest-insta = "^0.1.11"
rich = "^12.2.0"
pygments = {git = "https://github.com/rx-modules/pygments"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mudkip]
preset = "furo"

[tool.mudkip.override]
html_title = "integrity"
suppress_warnings = ["myst.header"]

[tool.semantic_release]
branch = "main"
version_variable = ["integrity/__init__.py:__version__"]
version_toml = "pyproject.toml:tool.poetry.version"
major_on_zero = false
build_command = "poetry build"